# Whale-Market

./: CMakeLists.txt  README.md
include/tools/: colors.h  hints.h  info.h
src/: main.cpp
src/tools/: colors.cpp  hints.cpp  info.cpp
